--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@styled-icons/material-outlined": "^10.46.0",
+    "@tanstack/react-query": "^4.23.0",
+    "@tanstack/react-query-devtools": "^4.23.0",
     "axios": "^1.2.2",
     "dompurify": "^2.4.3",
+    "focus-trap-react": "^10.0.2",
     "i18next": "^22.1.5",
     "install": "^0.13.0",
     "joi": "^17.7.0",
@@ -27,7 +30,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-i18next": "^12.1.1",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.5",
     "styled-components": "^5.3.6",
     "styled-media-query": "^2.1.2"
