--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "vitest run",
     "test:w": "vitest",
     "generate": "plop --plopfile generators/plopfile.mjs",
-    "server": "json-server --watch server/db.json --port 9000"
+    "server": "json-server --watch server/db.json --port 9000",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test dev 5173 cy:open"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -35,6 +38,7 @@
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -45,10 +49,12 @@
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "cypress": "^12.4.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -59,6 +65,7 @@
     "plop": "^3.0.5",
     "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
+    "start-server-and-test": "^1.15.3",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vitest": "^0.25.6"
